# tides-of-uncertainty

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
algorithms/QPE/: README.md
algorithms/deutsch_algorithm/: deutsch.py
algorithms/deutsch_jozsa_algorithm/: deutsch_jozsa.py
docs/: CNAME  _config.yml  index.html  index.md
docs/_data/: navigation.yml
docs/_includes/head/: custom.html
docs/_pages/: research.md  tools.md
docs/_posts/: 2019-04-18-order-of-operations.md  2025-07-06-order-of-operations.md
docs/assets/css/: custom.css
notebooks/: Classical Period Finding — Full Exploration Notebook.ipynb  Harmonic oscillator.ipynb  Particle in a box.ipynb
notebooks/walkthroughs/: Building Quantum Fourier Transform (QFT) - Step-by-step guide.ipynb
notebooks/walkthroughs/.ipynb_checkpoints/: Building Quantum Fourier Transform (QFT) - Step-by-step guide-checkpoint.ipynb
qutilities/: __init__.py
qutilities/QFT/: Building the Quantum Fourier Transform.ipynb  QFT.py  README.md  __init__.py
qutilities/QFT/.ipynb_checkpoints/: Building the Quantum Fourier Transform-checkpoint.ipynb  QFT-checkpoint.py
qutilities/qpe/: README_QPE.md  __init__.py  qpe.py
qutilities/qpe/.ipynb_checkpoints/: __init__-checkpoint.py
~legacy/quantum_stuff/: README.md
~legacy/quantum_stuff/old-qiskit-0.x/: QX01-HelloQuantum.ipynb  QX02-PhaseShift.ipynb  QX03-QuantumTeleportation.ipynb  QX04-BernsteinVaziraniAlgorithm.ipynb  Quantum Teleportation.ipynb  Superdense Coding.ipynb
~legacy/quantum_stuff/phase_estimation/: qpe.py
(+2 files in other folders)
