[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qutilities"
version = "0.1.0"
description = "Modular quantum utilities: QFT, QPE, and more"
authors = [
  { name="On Tides of Uncertainty" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["qiskit"]

[project.urls]
Homepage = "https://github.com/MarcusSkynet/tides-of-uncertainty"

[tool.setuptools]
packages = ["qutilities"]